# esp32-button

./: .env.example  CMakeLists.txt  README.md  button.c  button.h  idf_component.yml  port.c  port.h  toggle.c  toggle.h
.github/workflows/: backend-ci.yml
agent/embedded/: CMakeLists.txt  LICENSE  README.md  button.h  idf_component.yml  port.c  port.h
agent/embedded/example/: main.c
agent/embedded/tests/: test_toggle.c
agent/embedded/tests/stubs/: stubs.c
agent/embedded/tests/stubs/include/: esp_attr.h  esp_err.h  esp_intr_alloc.h
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_auth_rbac_and_audit_guards.py  0003_device_protocol_columns.py
backend/app/: main.py
backend/app/api/routes/: auth.py  device_protocol.py  health.py  settings.py
backend/app/core/: config.py  logging.py  rbac.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/repositories/: device_repository.py  settings_repository.py  user_repository.py
backend/app/schemas/: auth.py  device_protocol.py  settings.py
backend/app/services/: auth_service.py  device_protocol_service.py  settings_service.py
backend/app/workers/: celery_app.py
backend/tests/: test_device_protocol_service.py  test_observability.py  test_security.py
docs/: current-state.md  device-protocol.md  rebuild-status.md  technical-decisions.md
example/: main.c
tests/stubs/include/: esp_log.h
tests/stubs/include/freertos/: FreeRTOS.h  semphr.h
(+2 files in other folders)
