[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signage-backend"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.1.0",
  "pydantic-settings>=2.2.0",
  "pydantic[email]>=2.0.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose>=3.3.0",
  "prometheus-client>=0.20.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "httpx>=0.27.0"
]

[tool.ruff]
line-length = 120

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
